--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="typewriterContainer">
     <p id="loreText">Initializing lore...</p>
     </div>
-    <audio id="loreVoice" src="y'shtolaopening.wav"></audio>
+    <audio id="loreVoice" src="y'shtolaopening.mp3"></audio>
     <button id="beginBtn" onclick="showClassPrompt()">Begin Trading</button>
 </div>
 
@@ -192,7 +192,7 @@
 <div id="classPrompt" style="display: none; text-align: center; padding: 40px;">
     <h2>Register Your Character</h2>
     <p>Enter your FFXIV character details and choose a class to begin:</p>
-    <audio id="chooseClassVoice" src="y'shtolachoose.wav"></audio>
+    <audio id="chooseClassVoice" src="y'shtolachoose.mp3"></audio>
     <input id="onboardingCharacterName" placeholder="Character Name" required style="max-width: 300px;" /><br><br>
 
     <select id="onboardingCharacterRace" style="max-width: 300px;" required>
